--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,11 @@
-# Numerous always-ignore extensions
-*.diff
-*.err
-*.orig
-*.log
-*.rej
-*.swo
-*.swp
-*.vi
-*~
-*.sass-cache
-
-# OS or Editor folders
+.bundle
+log/*.log
+.idea/*
+tmp/
+config/database.yml
+public/uploads
+.tddium*
+.tddium
 .DS_Store
-Thumbs.db
-.cache
-.project
-.settings
-.tmproj
-*.esproj
-nbproject
-*.sublime-project
-*.sublime-workspace
-
-# Dreamweaver added files
-_notes
-dwsync.xml
-
-# Komodo
-*.komodoproject
-.komodotools
-
-# Folders to ignore
-.hg
-.svn
-.CVS
-intermediate
-publish
-.idea
-
-# build script local files
-build/buildinfo.properties
-build/config/buildinfo.properties
+public/upload
+db/*.sqlite3
